[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/bee.png" type="Texture" id=2]
[ext_resource path="res://objects/Bullets/Bee.gd" type="Script" id=3]
[ext_resource path="res://code/VariableSound2D.gd" type="Script" id=4]
[ext_resource path="res://sounds/Default 3 (3).wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 5, 4 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 5, 0, 5, 4 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 2.7282

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 75, 0, -75, -100, 0 )

[node name="Bee" instance=ExtResource( 1 )]
pause_mode = 0
script = ExtResource( 3 )
accel_speed = 800.0
max_speed = 220
can_be_damaged = true
max_hp = 1
damage = 1
move_speed = 400
lifetime = 5.0
spread = 0.2

[node name="Sprite" parent="." index="0"]
frames = SubResource( 3 )
playing = true

[node name="HurtBox" parent="." index="2"]
position = Vector2( 1, 0 )
shape = SubResource( 4 )

[node name="Hitbox" parent="." index="3"]
collision_mask = 6

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 2.52, 0 )

[node name="SearchBox" type="Area2D" parent="." index="5"]
position = Vector2( 8, 0 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="SearchBox" index="0"]
position = Vector2( 104.535, 0 )
shape = SubResource( 5 )
disabled = true

[node name="SearchTimer" type="Timer" parent="." index="6"]
wait_time = 0.25
one_shot = true
autostart = true

[node name="BetrayTimer" type="Timer" parent="." index="7"]
one_shot = true
autostart = true

[node name="Buzz" type="AudioStreamPlayer2D" parent="." index="8"]
stream = ExtResource( 5 )
volume_db = -12.211
pitch_scale = 1.05
autoplay = true
max_distance = 500.0
attenuation = 7.72748
bus = "Fx"
script = ExtResource( 4 )
pitch_variation = 0.3

[connection signal="body_entered" from="SearchBox" to="." method="_on_SearchBox_body_entered"]
[connection signal="timeout" from="SearchTimer" to="." method="_on_SearchTimer_timeout"]
[connection signal="timeout" from="BetrayTimer" to="." method="_on_BetrayTimer_timeout"]
